edit positioning of shop html elements

--- a/src/main/resources/templates/Shop.html
+++ b/src/main/resources/templates/Shop.html
@@ -7,6 +7,15 @@
     <body>
         <h1 style="margin: 50px">Shop</h1>
         <div style="margin: 50px">
+            <div style="margin-bottom: 25px">
+                <label for="filter">filter:</label>
+                <select name="filter" id="filter">
+                    <option value="by-name">By Name</option>
+                    <option value="by-author">By Author</option>
+                    <option value="by-publisher">By Publisher</option>
+                </select>
+            </div>
+
             <form action="/action_page.php">
                 <label for="search">Search Books:</label><br />
                 <input type="text" id="search" name="search" value="" /><br />
@@ -16,13 +25,6 @@
             <div style="margin-top: 30px; margin-bottom: 30px">
                 should query for all books here, via a table or something
             </div>
-
-            <label for="filter">filter:</label>
-            <select name="filter" id="filter">
-                <option value="by-name">By Name</option>
-                <option value="by-author">By Author</option>
-                <option value="by-publisher">By Publisher</option>
-            </select>
         </div>
 
         <div style="margin: 50px"><button>Purchase</button></div>
