edit vendor html spacing

--- a/src/main/resources/templates/Vendor.html
+++ b/src/main/resources/templates/Vendor.html
@@ -9,35 +9,67 @@
         <div style="margin: 50px">
             <form action="/action_page.php">
                 <label for="search">Add Book:</label><br />
-                <label>Name:</label><br />
-                <input type="text" id="name" name="name" value="" /><br />
-                <label>ISBN:</label><br />
-                <input type="text" id="isbn" name="isbn" value="" /><br />
-                <label>Picture:</label><br />
-                <input type="text" id="picture" name="picture" value="" /><br />
-                <label>Author:</label><br />
-                <input type="text" id="author" name="author" value="" /><br />
-                <label>Publisher:</label><br />
-                <input
-                    type="text"
-                    id="publisher"
-                    name="publisher"
-                    value=""
-                /><br />
-                <label>Description:</label><br />
-                <input
-                    type="text"
-                    id="description"
-                    name="description"
-                    value=""
-                /><br />
-                <label>Inventory:</label><br />
-                <input
-                    type="text"
-                    id="inventory"
-                    name="inventory"
-                    value=""
-                /><br />
+
+                <div style="margin-top: 10px">
+                    <label>Name:</label><br />
+                    <input type="text" id="name" name="name" value="" /><br />
+                </div>
+
+                <div style="margin-top: 10px">
+                    <label>ISBN:</label><br />
+                    <input type="text" id="isbn" name="isbn" value="" /><br />
+                </div>
+
+                <div style="margin-top: 10px">
+                    <label>Picture:</label><br />
+                    <input
+                        type="text"
+                        id="picture"
+                        name="picture"
+                        value=""
+                    /><br />
+                </div>
+
+                <div style="margin-top: 10px">
+                    <label>Author:</label><br />
+                    <input
+                        type="text"
+                        id="author"
+                        name="author"
+                        value=""
+                    /><br />
+                </div>
+
+                <div style="margin-top: 10px">
+                    <label>Publisher:</label><br />
+                    <input
+                        type="text"
+                        id="publisher"
+                        name="publisher"
+                        value=""
+                    /><br />
+                </div>
+
+                <div style="margin-top: 10px">
+                    <label>Description:</label><br />
+                    <input
+                        type="text"
+                        id="description"
+                        name="description"
+                        value=""
+                    /><br />
+                </div>
+
+                <div style="margin-top: 10px">
+                    <label>Inventory:</label><br />
+                    <input
+                        type="text"
+                        id="inventory"
+                        name="inventory"
+                        value=""
+                    /><br />
+                </div>
+
                 <input type="submit" />
             </form>
         </div>
