rephrase language on shop page

--- a/src/main/resources/templates/Shop.html
+++ b/src/main/resources/templates/Shop.html
@@ -23,7 +23,14 @@
             </form>
 
             <div style="margin-top: 30px; margin-bottom: 30px">
-                should query for all books here, via a table or something
+                should query for all "for sale" booklisting here, via a table or
+                something ignore duplicate books for the booklisting, books can
+                be the same and have different prices by different store vendors
+
+                <div style="margin-top: 30px; margin-bottom: 30px">
+                    next step is to have a + and - button for adding and
+                    removing inventory
+                </div>
             </div>
         </div>
 
