--- a/src/main/resources/templates/Login.html
+++ b/src/main/resources/templates/Login.html
@@ -5,8 +5,28 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     </head>
     <body>
-        <h1 style="margin: 50px">Login</h1>
-        <button style="margin: 50px">Customer Login</button>
-        <button style="margin: 50px">Vendor Login</button>
+
+        <h2 style="margin: 50px">Customer Login</h2>
+        <form action="#" 
+                th:action="@{/login}" 
+                method="get">
+            <label for="userName"> Username </label>
+            <input type="text" id="userName" 
+                name="userName" value="customer1"/>
+            <input type="submit" value="Submit" />
+        </form>
+        
+        <!-- Vendor Login -->
+        <h2 style="margin: 50px">Vendor Login</h2>
+        <form action="#" 
+                th:action="@{/login}" 
+                method="get">
+            <label for="userName"> Username </label>
+            <input type="text" id="userName" 
+                name="userName" value="vendor1"/>
+            <input type="submit" value="Submit" />
+        </form>
+        
+    </form>
     </body>
 </html>
