--- a/src/main/resources/templates/Error.html
+++ b/src/main/resources/templates/Error.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <title>Error</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
