--- a/src/main/resources/templates/VendorCreate.html
+++ b/src/main/resources/templates/VendorCreate.html
@@ -19,16 +19,17 @@
         <tr>
             <td>
                 <form method="post" action="" th:object="${book}">
-                    <p>Add New Book</p>
-                    <label>ISBN:<input type="text" placeholder="Enter ISBN" name="isbn"/></label>
-                    <label>Version: <input type="text" placeholder="Enter Version" name="version"/></label>
-                    <label>Name: <input type="text" placeholder="Enter Name" name="name" ></label>
-                    <label>Description: <input type="text" placeholder="Enter Description" name="description"/></label>
-                    <label>Publisher: <input type="text" placeholder="Enter Publisher" name="publisher"/></label>
-                    <label>Stock: <input type="text" placeholder="Enter Stock" name="stock"/></label>
-                    <label>Price: <input type="text" placeholder="Enter Price" name="price"/></label>
+                    <p>Add New Book</p><br>
+                    <label>ISBN:<input type="text" placeholder="Enter ISBN" name="isbn"/></label><br>
+                    <label>Version: <input type="text" placeholder="Enter Version" name="version"/></label><br>
+                    <label>Name: <input type="text" placeholder="Enter Name" name="name" ></label><br>
+                    <label>Description: <input type="text" placeholder="Enter Description" name="description"/></label><br>
+                    <label>Publisher: <input type="text" placeholder="Enter Publisher" name="publisher"/></label><br>
+                    <label>Stock: <input type="text" placeholder="Enter Stock" name="stock"/></label><br>
+                    <label>Price: <input type="text" placeholder="Enter Price" name="price"/></label><br>
                     <input type="submit" value="AddBook" name="AddBook">
-                    <input type="reset" value="Reset" />
+                    <input type="reset" value="Reset" /><br>
+                    <p style="color: red" th:text="${createBookError}"></p>
                 </form>
             </td>
         </tr>
