--- a/src/main/resources/templates/VendorEdit.html
+++ b/src/main/resources/templates/VendorEdit.html
@@ -13,29 +13,48 @@
 </div>
 
 <div style="margin: 50px">
-    <h2>Edit Book Information</h2>
+    <h2>Search Book Information</h2>
 
     <table style="width: 100%">
         <tbody style="width: 100%">
         <tr>
             <td>
                 <form method="post" action="" th:object="${book}">
-                    <p>Add New Book</p>
-                    <label>ISBN:<input type="text" placeholder="Enter ISBN" name="isbn"/></label>
-                    <label>Version: <input type="text" placeholder="Enter Version" name="version"/></label>
                     <label>Name: <input type="text" placeholder="Enter Name" name="name" ></label>
-                    <label>Description: <input type="text" placeholder="Enter Description" name="description"/></label>
-                    <label>Publisher: <input type="text" placeholder="Enter Publisher" name="publisher"/></label>
-                    <label>Stock: <input type="text" placeholder="Enter Stock" name="stock"/></label>
-                    <label>Price: <input type="text" placeholder="Enter Price" name="price"/></label>
-                    <input type="submit" value="EditBook" name="EditBook">
+                    <input type="submit" value="SearchBook" name="SearchBook">
                     <input type="reset" value="Reset" />
+                    <p style="color: red" th:text="${BookSearchError}"></p>
                 </form>
             </td>
         </tr>
         </tbody>
     </table>
-
 </div>
+
+<div style="margin: 50px">
+    <h3>Books Found</h3>
+
+    <table style="border: solid black 2px; width: 100%; text-align: center">
+        <tbody class="tbody">
+        <thead>
+        <th>ISBN</th>
+        <th>Version</th>
+        <th>Name</th>
+        <th>Price</th>
+        <th>Stock</th>
+        <th>Description</th>
+        </thead>
+        <tr th:each="book: ${books}">
+            <td th:text="${book.isbn}" />
+            <td th:text="${book.version}" />
+            <td th:text="${book.name}" />
+            <td th:text="${book.price}" />
+            <td th:text="${book.stock}" />
+            <td th:text="${book.description}"/>
+        </tr>
+        </tbody>
+    </table>
+</div>
+
 </body>
 </html>
