--- a/src/main/resources/templates/VendorCreate.html
+++ b/src/main/resources/templates/VendorCreate.html
@@ -21,7 +21,8 @@
                 <form method="post" action="" th:object="${book}">
                     <p>Add New Book</p><br>
                     <label>ISBN:<input type="text" placeholder="Enter ISBN" name="isbn"/></label><br>
-                    <label>Create New Variant: <input type="text" placeholder="Enter Version" name="createNewVariant"/></label><br>
+                    <label>Create New Variant: <input type="radio" name="createNewVariant" value="True"/></label><br>
+                    <label>Do Not Create New Variant: <input type="radio" name="createNewVariant" value="False"/></label><br>
                     <label>Name: <input type="text" placeholder="Enter Name" name="name" ></label><br>
                     <label>Description: <input type="text" placeholder="Enter Description" name="description"/></label><br>
                     <label>Publisher: <input type="text" placeholder="Enter Publisher" name="publisher"/></label><br>
