--- a/src/main/resources/templates/Shop.html
+++ b/src/main/resources/templates/Shop.html
@@ -1,39 +1,38 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
-    <head>
-        <title>Shop</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    </head>
-    <body>
-        <h1 style="margin: 50px">Shop</h1>
-        <div style="margin: 50px">
-            <div style="margin-bottom: 25px">
-                <label for="filter">filter:</label>
-                <select name="filter" id="filter">
-                    <option value="by-name">By Name</option>
-                    <option value="by-author">By Author</option>
-                    <option value="by-publisher">By Publisher</option>
-                </select>
-            </div>
+<head>
+    <title>Shop</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+</head>
+<body>
+<h1 style="margin: 50px">Shop</h1>
+<div id="navbar">
+    <a th:href="@{/ShoppingCart}">My Cart</a>
+</div>
+<div style="margin: 50px">
+    <h2>All Books</h2>
 
-            <form action="/action_page.php">
-                <label for="search">Search Books:</label><br />
-                <input type="text" id="search" name="search" value="" /><br />
-                <input type="submit" value="Search" />
-            </form>
-
-            <div style="margin-top: 30px; margin-bottom: 30px">
-                should query for all "for sale" booklisting here, via a table or
-                something ignore duplicate books for the booklisting, books can
-                be the same and have different prices by different store vendors
-
-                <div style="margin-top: 30px; margin-bottom: 30px">
-                    next step is to have a + and - button for adding and
-                    removing inventory
-                </div>
-            </div>
-        </div>
-
-        <div style="margin: 50px"><button>Purchase</button></div>
-    </body>
+    <table style="border: solid black 2px; width: 100%; text-align: center">
+        <tbody class="tbody">
+        <thead>
+        <th>ISBN</th>
+        <th>Version</th>
+        <th>Name</th>
+        <th>Price</th>
+        <th>Stock</th>
+        <th>Description</th>
+        </thead>
+        <tr th:each="book: ${books}">
+            <td th:text="${book.isbn}" />
+            <td th:text="${book.version}" />
+            <td th:text="${book.name}" />
+            <td th:text="${book.price}" />
+            <td th:text="${book.stock}" />
+            <td th:text="${book.description}"/>
+            <td><button type="button">+/-</button></td>
+        </tr>
+        </tbody>
+    </table>
+</div>
+</body>
 </html>
