--- a/src/main/resources/templates/VendorEdit.html
+++ b/src/main/resources/templates/VendorEdit.html
@@ -13,7 +13,7 @@
 </div>
 
 <div style="margin: 50px">
-    <h2>Search Book Information</h2>
+    <h2>Search Book To Edit</h2>
 
     <table style="width: 100%">
         <tbody style="width: 100%">
