--- a/src/main/resources/templates/Shop.html
+++ b/src/main/resources/templates/Shop.html
@@ -5,45 +5,55 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-<h1 style="margin: 50px">Shop</h1>
-<div id="navbar">
-    <a th:href="@{/ShoppingCart}">My Cart</a>
-</div>
-<div style="margin: 50px">
-    <h2>All Books</h2>
+    <h1 style="margin: 50px">Shop</h1>
+    <div id="navbar">
+        <a th:href="@{/ShoppingCart}">My Cart</a>
+    </div>
+    <div style="margin: 50px">
+        <h2>All Books</h2>
 
-    <table style="border: solid black 2px; width: 100%; text-align: center">
-        <tbody class="tbody">
-        <thead>
-        <th>ISBN</th>
-        <th>Version</th>
-        <th>Name</th>
-        <th>Price</th>
-        <th>Stock</th>
-        <th>Description</th>
-        </thead>
-        <tr th:each="book: ${books}">
-            <td th:text="${book.isbn}" />
-            <td th:text="${book.version}" />
-            <td th:text="${book.name}" />
-            <td th:text="${book.price}" />
-            <td th:text="${book.stock}" />
-            <td th:text="${book.description}"/>
-            <td>
-                <button type="button" th:onclick="inc()">+</button>
-                <input type="number" name="quantity" value = "0" min="0" th:attr="max=${book.stock}" readonly>
-                <button type="button" th:onclick="|window.location.href='/increment'|">-</button>
-                <script type="text/javascript">
-                    function inc(){
-                        console.log("yoyo")
-                    }
+        <table style="border: solid black 2px; width: 100%; text-align: center">
+            <tbody class="tbody">
+            <thead>
+                <th>ISBN</th>
+                <th>Version</th>
+                <th>Name</th>
+                <th>Price</th>
+                <th>Stock</th>
+                <th>Description</th>
+            </thead>
+            <tr th:each="book: ${books}">
+                <td th:text="${book.isbn}" />
+                <td th:text="${book.version}" />
+                <td th:text="${book.name}" />
+                <td th:text="${book.price}" />
+                <td th:text="${book.stock}" />
+                <td th:text="${book.description}"/>
+                <td>
+                    <button type="button" th:attr="onclick='incrementQuantity(\'' + ${book.stock}+ '\'' + ',' + '\'' + ${book.isbn}+ '\');'" >+</button>
+                    <label>
+                        <input type="number" th:id="${book.isbn}" name="quantity" th:value = "0" min="0" th:attr="max=${book.stock}" readonly>
+                    </label>
+                    <button type="button" th:attr="onclick='decrementQuantity(\'' + ${book.isbn}+  '\');'">-</button>
+                    <script type="text/javascript">
+                        function incrementQuantity(maxValue, elementId){
+                            let currentValue = document.getElementById(elementId).value;
+                            if (currentValue < maxValue){
+                                document.getElementById(elementId).value++;
+                            }
+                        }
 
-                </script>
-            </td>
-            <td th:text="0" />
-        </tr>
-        </tbody>
-    </table>
-</div>
+                        function decrementQuantity(elementId){
+                            let currentValue = document.getElementById(elementId).value;
+                            if (currentValue > 0){
+                                document.getElementById(elementId).value--;
+                            }
+                        }
+
+                    </script>
+                </td>
+            </tr>
+        </table>
+    </div>
 </body>
 </html>
