--- a/src/main/resources/templates/VendorEdit.html
+++ b/src/main/resources/templates/VendorEdit.html
@@ -9,7 +9,7 @@
         <div id="navbar">
             <a th:href="@{/Vendor}">View Books</a>
             <a th:href="@{/VendorCreate}">Create Books</a>
-            <a th:href="@{/VendorEdit}">Search Books</a>
+            <a th:href="@{/VendorEdit}">Edit Books</a>
         </div>
 
         <div style="margin: 50px">
