edit params on mapping from SearchBooks to EditBooks

--- a/src/main/resources/templates/VendorEdit.html
+++ b/src/main/resources/templates/VendorEdit.html
@@ -64,7 +64,7 @@
                         placeholder="Enter Price"
                         name="price" /></label
                 ><br />
-                <input type="submit" value="Select Book To Edit" name="SearchBook" />
+                <input type="submit" value="Select Book To Edit" name="EditBook" />
                 <p style="color: red" th:text="${BookSearchError}"></p>
             </form>
         </div>
