--- a/src/main/resources/templates/VendorEdit.html
+++ b/src/main/resources/templates/VendorEdit.html
@@ -10,6 +10,7 @@
             <a th:href="@{/Vendor}">View Books</a>
             <a th:href="@{/VendorCreate}">Create Books</a>
             <a th:href="@{/VendorEdit}">Edit Books</a>
+            <a th:href="@{/VendorLogin}">Log Out</a>
         </div>
 
         <div style="margin: 50px">
