--- a/src/main/resources/templates/CustomerLogin.html
+++ b/src/main/resources/templates/CustomerLogin.html
@@ -14,9 +14,13 @@
         <h2 style="margin: 50px">Customer Login</h2>
         <form method="post" action="" th:object="${customerAccount}">
             <label>Username: <input type="text" placeholder="Enter username" name="username"/></label>
+            <label>Password: <input type="text" placeholder="Enter password" name="password"/></label>
             <p style="color: red" th:text="${loginError}"></p>
             <input type="submit" value="Login" name="customerLogin"/>
         </form>
 
+    <div>
+        <p>Do Not have an Account? Sign up Here: <a th:href="@{/SignUp}">Sign Up</a> </p>
+    </div>
     </body>
 </html>
