--- a/src/main/resources/templates/VendorLogin.html
+++ b/src/main/resources/templates/VendorLogin.html
@@ -15,9 +15,13 @@
 <h2 style="margin: 50px">Vendor Login</h2>
 <form method="post" action="" th:object="${vendorAccount}">
     <label>Username: <input type="text" placeholder="Enter username" name="username"/></label>
+    <label>Password: <input type="text" placeholder="Enter password" name="password"/></label>
     <p style="color: red" th:text="${loginError}"></p>
     <input type="submit" value="Login" name="vendorLogin"/>
 </form>
 
+<div>
+    <p>Do Not have an Account? Sign up Here: <a th:href="@{/SignUp}">Sign Up</a> </p>
+</div>
 </body>
 </html>
