add tests for login

--- a/src/main/resources/templates/VendorLogin.html
+++ b/src/main/resources/templates/VendorLogin.html
@@ -7,7 +7,7 @@
 <body>
 
 <div id="navbar">
-    <a th:href="@{/CustomerLogin}">Customer Login</a>
+<!--    <a th:href="@{/CustomerLogin}">Customer Login</a>-->
     <a th:href="@{/VendorLogin}">Vendor Login</a>
 </div>
 
