--- a/src/main/resources/templates/SignUp.html
+++ b/src/main/resources/templates/SignUp.html
@@ -8,7 +8,7 @@
 
 <div id="navbar">
     <h1 style="margin: 10px">Already Signed Up? Pick a login page then:</h1>
-    <a th:href="@{/CustomerLogin}">Customer Login</a>
+<!--    <a th:href="@{/CustomerLogin}">Customer Login</a>-->
     <a th:href="@{/VendorLogin}">Vendor Login</a>
 </div>
 
@@ -16,7 +16,7 @@
 <form method="post" action="" th:object="${newAccount}">
     <label>Username: <input type="text" placeholder="Enter username" name="username"/></label><br>
     <label>Password: <input type="text" placeholder="Enter password" name="password"/></label><br>
-    <label>Is this a Vendor Account? : <input type="checkbox" name="type" value="Vendor"/></label><br>
+<!--    <label>Is this a Vendor Account? : <input type="checkbox" name="type" value="Vendor"/></label><br>-->
     <p style="color: red" th:text="${signUpError}"></p>
     <input type="submit" value="SignUp" name="SignUp"/>
 </form>
