Uml Class Diagram + ER Diagram consistency in Edit Books link change

--- a/src/main/resources/templates/Vendor.html
+++ b/src/main/resources/templates/Vendor.html
@@ -9,7 +9,7 @@
         <div id="navbar">
             <a th:href="@{/Vendor}">View Books</a>
             <a th:href="@{/VendorCreate}">Create Books</a>
-            <a th:href="@{/VendorEdit}">Search Books</a>
+            <a th:href="@{/VendorEdit}">Edit Books</a>
             <a th:href="@{/VendorLogin}">Log Out</a>
         </div>
 
