Fixed routing of signUp page from Vendor Login and removing landing page handling from Front Controller

--- a/src/main/resources/templates/VendorLogin.html
+++ b/src/main/resources/templates/VendorLogin.html
@@ -21,7 +21,7 @@
 </form>
 
 <div>
-    <p>Do Not have an Account? Sign up Here: <a th:href="@{/SignUp}">Sign Up</a> </p>
+    <p>Do Not have an Account? Sign up Here: <a th:href="@{/}">Sign Up</a> </p>
 </div>
 </body>
 </html>
