css rework for html pages

--- a/src/main/resources/templates/Vendor.html
+++ b/src/main/resources/templates/Vendor.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1 style="margin: 50px">Vendor</h1>
-        <div id="navbar">
+        <div id="navbar" style="background-color: orange">
             <a th:href="@{/Vendor}">View Books</a>
             <a th:href="@{/VendorCreate}">Create Books</a>
             <a th:href="@{/VendorEdit}">Search Books</a>
@@ -16,26 +16,28 @@
         <div style="margin: 50px">
             <h2>All Books</h2>
 
-        <table style="border: solid black 2px; width: 100%; text-align: center">
-            <tbody class="tbody">
-            <thead>
-                <th>ISBN</th>
-                <th>Version</th>
-                <th>Name</th>
-                <th>Price</th>
-                <th>Stock</th>
-                <th>Description</th>
-            </thead>
-            <tr th:each="book: ${books}">
-                <td th:text="${book.isbn}" />
-                <td th:text="${book.version}" />
-                <td th:text="${book.name}" />
-                <td th:text="${book.price}" />
-                <td th:text="${book.stock}" />
-                <td th:text="${book.description}"/>
-            </tr>
-            </tbody>
-        </table>
+            <table
+                style="border: solid black 2px; width: 100%; text-align: center"
+            >
+                <tbody class="tbody">
+                    <thead>
+                        <th>ISBN</th>
+                        <th>Version</th>
+                        <th>Name</th>
+                        <th>Price</th>
+                        <th>Stock</th>
+                        <th>Description</th>
+                    </thead>
+                    <tr th:each="book: ${books}">
+                        <td th:text="${book.isbn}" />
+                        <td th:text="${book.version}" />
+                        <td th:text="${book.name}" />
+                        <td th:text="${book.price}" />
+                        <td th:text="${book.stock}" />
+                        <td th:text="${book.description}" />
+                    </tr>
+                </tbody>
+            </table>
         </div>
     </body>
 </html>
