--- a/src/main/resources/templates/SignUp.html
+++ b/src/main/resources/templates/SignUp.html
@@ -34,5 +34,12 @@
                 <input type="submit" value="SignUp" name="SignUp" />
             </form>
         </div>
+
+        <div>
+            <p>
+                Already have an account? Login here:
+                <a th:href="@{/VendorLogin}">Login</a>
+            </p>
+        </div>
     </body>
 </html>
