--- a/src/main/resources/templates/VendorLogin.html
+++ b/src/main/resources/templates/VendorLogin.html
@@ -11,22 +11,30 @@
             <a th:href="@{/VendorLogin}">Vendor Login</a>
         </div>
 
-        <form method="post" action="" th:object="${vendorAccount}">
-            <label
-                >Username:
-                <input type="text" placeholder="Enter username" name="username"
-            /></label>
-            <label
-                >Password:
-                <input type="text" placeholder="Enter password" name="password"
-            /></label>
-            <p style="color: red" th:text="${loginError}"></p>
-            <input type="submit" value="Login" name="vendorLogin" />
-        </form>
+        <div style="margin: 50px">
+            <form method="post" action="" th:object="${vendorAccount}">
+                <label
+                    >Username:
+                    <input
+                        type="text"
+                        placeholder="Enter username"
+                        name="username"
+                /></label>
+                <label
+                    >Password:
+                    <input
+                        type="text"
+                        placeholder="Enter password"
+                        name="password"
+                /></label>
+                <p style="color: red" th:text="${loginError}"></p>
+                <input type="submit" value="Login" name="vendorLogin" />
+            </form>
+        </div>
 
         <div>
             <p>
-                Do Not have an Account? Sign up Here:
+                Do not have an account? Sign up here:
                 <a th:href="@{/}">Sign Up</a>
             </p>
         </div>
