--- a/src/main/resources/templates/VendorLogin.html
+++ b/src/main/resources/templates/VendorLogin.html
@@ -3,13 +3,14 @@
     <head>
         <title>Login</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <link rel="stylesheet" th:href="@{/css/styles.css}"/>
     </head>
     <body>
         <h1 style="margin: 50px">Vendor Login</h1>
-        <div id="navbar" style="background-color: orange">
+        <navbar>
             <!--    <a th:href="@{/CustomerLogin}">Customer Login</a>-->
             <a th:href="@{/VendorLogin}">Vendor Login</a>
-        </div>
+        </navbar>
 
         <div style="margin: 50px">
             <form method="post" action="" th:object="${vendorAccount}">
@@ -19,7 +20,7 @@
                         type="text"
                         placeholder="Enter username"
                         name="username"
-                /></label>
+                /></label><br>
                 <label
                     >Password:
                     <input
