--- a/src/main/resources/templates/SignUp.html
+++ b/src/main/resources/templates/SignUp.html
@@ -5,7 +5,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     </head>
     <body>
-        <h1 style="margin: 50px">Already Signed Up? Head to the Login Page:</h1>
+        <h1 style="margin: 50px">Amazin Book Shop (Milestone 2):</h1>
 
         <div id="navbar" style="background-color: orange">
             <!--    <a th:href="@{/CustomerLogin}">Customer Login</a>-->
